--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,16 @@ services:
     ports:
       - "3000:80"
     volumes:
-      - ./code:/usr/share/nginx/html
+      - ./code:/var/www/html
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - php
+
+  php:
+    image: php:8.2-fpm
+    container_name: lab2_php
+    volumes:
+      - ./code:/var/www/html
+    expose:
+      - "9000"
+
